tests/types/errors/compound_bitwise_result_unassignable.mog
var mask u8 = 240u8
var other u16 = 255u16
mask &= other
